--- a/node-express/package.json
+++ b/node-express/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "md5": "^2.3.0",
     "sqlite3": "^5.1.2"
   }
