--- a/node-express/package.json
+++ b/node-express/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "md5": "^2.3.0",
+    "sha512": "^0.0.1",
     "sqlite3": "^5.1.2"
   }
 }
